--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Hello, world! I'm David Freeman
+title: Thought Blog
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
@@ -19,7 +19,7 @@ social-linkedin: # add your Linkedin handle
 social-email: # add your Email address
 
 # Tracker
-analytics: # Google Analytics
+analytics: UA-143258770-2 # Google Analytics
 
 # Build Settings
 markdown: kramdown
